--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
                     <table id="schedule-table">
                         <tr class="table-head">
-                            <th>Train Name</th>
-                            <th>DEstination</th>
-                            <th>Frequency (min)</th>
-                            <th>ETA</th>
-                            <th>Minutes Away</th>
+                            <th class="tr-name">Train Name</th>
+                            <th class="tr-dest">Destination</th>
+                            <th class="tr-freq">Frequency (min)</th>
+                            <th class="tr-eta">ETA</th>
+                            <th class="tr-min">Minutes Away</th>
                         </tr>
                     </table>
                 </section>
